# opencc

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
src/opencc/: config.py  main.py
src/opencc/adapters/: base.py  slack.py
src/opencc/claude/: process.py  store.py
src/opencc/gateway/: router.py
