[project]
name = "opencc"
version = "0.1.0"
description = "IM-to-Claude Code gateway — bridge Slack (and other IM apps) to Claude Code CLI sessions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "slack-bolt[async]",
    "slack-sdk",
    "pydantic-settings",
    "python-dotenv",
    "aiohttp>=3.13.3",
]

[project.scripts]
opencc = "opencc.main:cli"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
